[package]
name = "cmta-fishnet"
version = "0.1.0"
edition = "2021"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Community RPC"
repository = "https://github.com/dcdao/community-rpc"
license = "MIT"
homepage = "https://github.com/dcdao/community-rpc"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["dcdao"]
readme = 'README.md'

[dependencies]

tracing            = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

color-eyre = "0.6"
sentry     = "0.31"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
structopt  = "0.3"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.11", features = ["json"] }
chrono     = "0.4"
sha1       = "0.10"


