[package]
name = "cmta-initializer"
version = "0.1.0"
edition = "2021"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Community RPC"
repository = "https://github.com/dcdao/community-rpc"
license = "MIT"
homepage = "https://github.com/dcdao/community-rpc"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["darwinia"]
readme = 'README.md'

[dependencies]

color-eyre = "0.6"
thiserror  = "1"


tracing            = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
